# 421702

sem3/PPOIS/lab2/: CMakeLists.txt  Doxyfile  README.md  airline.cpp  airline.hpp  count_classes.py  generate_coverage.sh  main.cpp  run.sh
sem3/PPOIS/lab2/coverage_html/: index.html
sem3/PPOIS/lab2/coverage_html/lab2s/: airline.hpp.gcov.html  index.html  main.cpp.gcov.html
sem3/PPOIS/lab2/docs/html/: README_8md.html  airline_8cpp.html  airline_8cpp_source.html  airline_8hpp.html  airline_8hpp.js  airline_8hpp_source.html  annotated.html  annotated_dup.js  classAircraft-members.html  classAircraft.html  classAircraft.js  classAircraftNotFoundException-members.html  classAircraftNotFoundException.html  classAircraftNotFoundException.js  classAirlineMenu-members.html  classAirlineMenu.html  classAirlineMenu.js  classAirlineTool-members.html  classAirlineTool.html  classAirlineTool.js  classBookingSystem-members.html  classBookingSystem.html  classBookingSystem.js  classBusinessFlight-members.html  classBusinessFlight.html  classBusinessFlight.js  classCabinClimateControl-members.html  classCabinClimateControl.html  classCabinClimateControl.js  classCabinLighting-members.html  classCabinLighting.html  classCabinLighting.js  classCargoFlight-members.html  classCargoFlight.html  classCargoFlight.js  classCharterFlight-members.html  classCharterFlight.html  classCharterFlight.js  classCleaningKit-members.html  classCleaningKit.html  (+204 more)
sem3/PPOIS/lab2/docs/html/coverage/: cmd_line  index.js
sem3/PPOIS/lab2/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+67 more)
sem3/PPOIS/lab2/tests/: airlineTests.cpp
sem3/PPOIS/my-ostis-module/: CMakeLists.txt  LogisticsModule.cpp  LogisticsModule.hpp  conanfile.txt
sem3/PPOIS/my-ostis-module/agents/: CostEstimatorAgent.cpp  CostEstimatorAgent.hpp  FileLoaderAgent.cpp  ShopClusteringAgent.cpp  StorageOptimizationAgent.cpp  StorageOptimizationAgent.hpp  VariantSelectorAgent.cpp
sem3/PPOIS/my-ostis-module/kb.bin/: string_offsets_link_hashes.scdb  strings1.scdb  term_string_offsets.scdb
sem3/PPOIS/my-ostis-module/keynodes/: LogisticsKeynodes.hpp
sem3/PPOIS/my-ostis-module/repo/: strings1.scdb
sem3/PPOIS/my-ostis-module/specifications/agent_of_warehouse_optimization/: logistics_keynodes.scs  ui_menu_optimize_warehouse.scs
sem3/PPOIS/my-ostis-module/test/: test_integration.cpp
sem3/PPOIS/my-ostis-module/test/test_data/: shops_15.csv  shops_3.csv  shops_5.csv
sem3/PPOIS/my-ostis-module/utils/: CsvParser.cpp  CsvParser.hpp  GeometryUtils.cpp
(+126 files in other folders)
